# stair_designer

./: CMakeLists.txt  README.md
include/geometry/: CustomLine.hpp  GenericLine.hpp  HorizontalLine.hpp  Line.hpp  Point.hpp  Shape.hpp  VerticalLine.hpp  shapes.hpp
include/ui/: Main.h  MainWindow.h
include/util/: Optional.hpp
resources/ui/: Main.ui  MainWindow.ui
src/: main.cpp
src/geometry/: CustomLine.cpp  GenericLine.cpp  HorizontalLine.cpp  Line.cpp  Point.cpp  VerticalLine.cpp  shapes.cpp
src/ui/: Main.cpp  MainWindow.cpp
test/: CMakeLists.txt
test/src/: main.cpp
test/src/geometry/: CustomLineTest.cpp  GenericLineTest.cpp  HorizontalLineTest.cpp  LineTest.cpp  LineTester.hpp  PointTest.cpp  VerticalLineTest.cpp  shapesTest.cpp
test/src/util/: OptionalTest.cpp
